syntax = "proto3";
package fx.gov.v1;

import "cosmos/base/v1beta1/coin.proto";
import "cosmos/msg/v1/msg.proto";
import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";
import "google/protobuf/duration.proto";
import "amino/amino.proto";

option go_package = "github.com/pundiai/fx-core/types/legacy";

// MsgUpdateParams is the Msg/UpdateParams request type.
message MsgUpdateFXParams {
  option deprecated = true;

  option (cosmos.msg.v1.signer) = "authority";
  option (amino.name) = "gov/MsgUpdateFXParams";

  // authority is the address of the governance account.
  string authority = 1 [ (cosmos_proto.scalar) = "cosmos.AddressString" ];

  // NOTE: All parameters must be supplied.
  Params params = 2 [ (gogoproto.nullable) = false ];
}

// MsgUpdateBaseParams is the Msg/UpdateParams request type.
message MsgUpdateEGFParams {
  option deprecated = true;

  option (cosmos.msg.v1.signer) = "authority";
  option (amino.name) = "gov/MsgUpdateEGFParams";

  // authority is the address of the governance account.
  string authority = 1 [ (cosmos_proto.scalar) = "cosmos.AddressString" ];

  // NOTE: All parameters must be supplied.
  EGFParams params = 2 [ (gogoproto.nullable) = false ];
}

message MsgUpdateParams {
  option deprecated = true;

  option (cosmos.msg.v1.signer) = "authority";
  string authority = 1 [ (cosmos_proto.scalar) = "cosmos.AddressString" ];
  LegacyParams params = 2 [ (gogoproto.nullable) = false ];
}

message LegacyParams {
  option deprecated = true;

  string msg_type = 1;

  repeated cosmos.base.v1beta1.Coin min_deposit = 2 [
    (gogoproto.nullable) = false,
    (gogoproto.jsontag) = "min_deposit,omitempty"
  ];

  cosmos.base.v1beta1.Coin min_initial_deposit = 3 [
    (gogoproto.nullable) = false,
    (gogoproto.jsontag) = "min_initial_deposit,omitempty"
  ];

  google.protobuf.Duration voting_period = 4 [ (gogoproto.stdduration) = true ];

  string quorum = 5 [ (gogoproto.jsontag) = "quorum,omitempty" ];

  google.protobuf.Duration max_deposit_period = 6 [
    (gogoproto.stdduration) = true,
    (gogoproto.jsontag) = "max_deposit_period,omitempty"
  ];

  string threshold = 7 [ (gogoproto.jsontag) = "threshold,omitempty" ];

  string veto_threshold = 8
      [ (gogoproto.jsontag) = "veto_threshold,omitempty" ];

  //  The ratio representing the proportion of the deposit value that must be
  //  paid at proposal submission.
  string min_initial_deposit_ratio = 9 [ (cosmos_proto.scalar) = "cosmos.Dec" ];

  // burn deposits if a proposal does not meet quorum
  bool burn_vote_quorum = 10;

  // burn deposits if the proposal does not enter voting period
  bool burn_proposal_deposit_prevote = 11;

  // burn deposits if quorum with vote type no_veto is met
  bool burn_vote_veto = 12;
}

// Deprecated Params defines the fx x/gov module params
message Params {
  option deprecated = true;

  string msg_type = 1;

  repeated cosmos.base.v1beta1.Coin min_deposit = 2 [
    (gogoproto.nullable) = false,
    (gogoproto.jsontag) = "min_deposit,omitempty"
  ];

  cosmos.base.v1beta1.Coin min_initial_deposit = 3 [
    (gogoproto.nullable) = false,
    (gogoproto.jsontag) = "min_initial_deposit,omitempty"
  ];

  google.protobuf.Duration voting_period = 4 [ (gogoproto.stdduration) = true ];

  string quorum = 5 [
    (cosmos_proto.scalar) = "cosmos.Dec",
    (gogoproto.jsontag) = "quorum,omitempty"
  ];

  google.protobuf.Duration max_deposit_period = 6 [
    (gogoproto.stdduration) = true,
    (gogoproto.jsontag) = "max_deposit_period,omitempty"
  ];

  string threshold = 7 [
    (cosmos_proto.scalar) = "cosmos.Dec",
    (gogoproto.jsontag) = "threshold,omitempty"
  ];

  string veto_threshold = 8 [
    (cosmos_proto.scalar) = "cosmos.Dec",
    (gogoproto.jsontag) = "veto_threshold,omitempty"
  ];

  //  The ratio representing the proportion of the deposit value that must be
  //  paid at proposal submission.
  string min_initial_deposit_ratio = 9 [ (cosmos_proto.scalar) = "cosmos.Dec" ];

  // burn deposits if a proposal does not meet quorum
  bool burn_vote_quorum = 10;

  // burn deposits if the proposal does not enter voting period
  bool burn_proposal_deposit_prevote = 11;

  // burn deposits if quorum with vote type no_veto is met
  bool burn_vote_veto = 12;
}

message EGFParams {
  option deprecated = true;

  cosmos.base.v1beta1.Coin egf_deposit_threshold = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.jsontag) = "egf_deposit_threshold,omitempty"
  ];

  string claim_ratio = 2 [
    (cosmos_proto.scalar) = "cosmos.Dec",
    (gogoproto.jsontag) = "claim_ratio,omitempty"
  ];
}